<resources>
    <string name="app_name">Sports Scoreboard</string>
    <string name="tab_text_1">Setup</string>
    <string name="tab_text_2">Timer</string>
    <string name="home_team_content">Home team name</string>
    <string name="away_team_content">Away team name</string>
    <string name="real_time_label">Real time: %d minutes</string>
    <string name="home_team_hint">Home team</string>
    <string name="away_team_hint">Away team</string>
    <string name="sim_time_label">Simulation time: %d minutes</string>
    <string name="null_activity_exception">Invalid activity</string>
    <string name="time_label">%1$dst</string>
    <string name="start_label">Start</string>
    <string name="time_format" translatable="false">%1$TM:%1$TS</string>
    <string name="home_team_flag_content">Home team flag</string>
    <string name="away_team_flag_content">Away team flag</string>
    <string name="versus_sign_content">Versus sign</string>
    <string name="versus_sign" translatable="false">x</string>
    <string name="two_halfs_label">Match has 2 halfs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
